Add step for installing apps from local F-Droid repo
Squashed commit of the following:

Author: Torsten Grote <t@grobox.de>
Date:   Mon Mar 11 15:23:19 2019 -0300

    Add step for installing apps from local F-Droid repo

Author: Torsten Grote <t@grobox.de>
Date:   Fri Mar 15 15:22:29 2019 -0300

    Remove unnecessary casts

Author: Chirayu Desai <chirayudesai1@gmail.com>
Date:   Sat Mar 16 14:59:53 2019 +0530

    Make the app install UI fit better with the rest of SetupWizard

Author: Torsten Grote <t@grobox.de>
Date:   Fri Mar 29 12:29:40 2019 -0300

    Fix scrolling and force scrolling when pressing Next

    This removes the nested scrolling and thus improves scrolling
    performance and restores the possibility to fling the list.

    Also, it simplifies the complicated deep layout hierachy which is
    generally bad for performance as well.

Author: Chirayu Desai <chirayudesai1@gmail.com>
Date:   Fri Aug 9 18:21:01 2019 +0530

    Improve the app installation process

    * Install microG providers only if microG is enabled.
    * Grant permissions to the microG providers.
    * Get app details from the F-Droid index.
    * Show summary for apps.
    * Localize name and summary for apps.

Author: Chirayu Desai <chirayudesai1@gmail.com>
Date:   Mon Aug 19 19:03:00 2019 +0530

    Wait for all apps to be installed, and timeout after a minute

    * Wait for all of the selected apps to get installed
    * If they aren't installed within a minute, let the user
      continue anyway.
    * Also disallow going back from the microG and app install
      screens, so that no mixups happen.

Author: Torsten Grote <t@grobox.de>
Date:   Wed Sep 4 12:08:42 2019 -0300

    Allow user to proceed when not installing any apps

Author: Chirayu Desai <chirayudesai1@gmail.com>
Date:   Tue Sep 10 18:55:33 2019 +0530

    Fix the app install wait for real this time

    * Wait for apps if selected
    * Don't install any apps not selected
    * Don't wait if no apps are selecte

--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -36,6 +36,7 @@
     <uses-permission android:name="android.permission.READ_PRIVILEGED_PHONE_STATE" />
     <uses-permission android:name="android.permission.MANAGE_ACCOUNTS" />
     <uses-permission android:name="android.permission.INTERACT_ACROSS_USERS" />
+    <uses-permission android:name="android.permission.INTERACT_ACROSS_USERS_FULL" />
     <uses-permission android:name="android.permission.MANAGE_USERS" />
     <uses-permission android:name="android.permission.CHANGE_COMPONENT_ENABLED_STATE" />
     <uses-permission android:name="android.permission.EXPAND_STATUS_BAR" />
@@ -52,6 +53,9 @@
 
     <protected-broadcast android:name="org.lineageos.setupwizard.SETUP_FINISHED"
                          android:permission="lineageos.permission.FINISH_SETUP"/>
+
+    <protected-broadcast android:name="org.lineageos.setupwizard.LINEAGE_APPS_INSTALLED"
+                         android:permission="calyxos.permission.FINISH_SETUP"/>
 
     <application android:label="@string/app_name"
                  android:icon="@mipmap/ic_launcher"
@@ -238,6 +242,32 @@
             </intent-filter>
         </activity>
 
+        <activity android:name=".apps.InstallAppsActivity"
+                  android:label="@string/activity_label_empty"
+                  android:excludeFromRecents="true"
+                  android:configChanges="mcc|mnc"
+                  android:immersive="true"
+                  android:exported="false"
+                  android:windowSoftInputMode="stateAlwaysHidden">
+            <intent-filter>
+                <action android:name="org.lineageos.setupwizard.LINEAGE_INSTALL_APPS" />
+                <category android:name="android.intent.category.DEFAULT" />
+            </intent-filter>
+        </activity>
+
+        <activity android:name=".apps.WaitInstallAppsActivity"
+                  android:label="@string/activity_label_empty"
+                  android:excludeFromRecents="true"
+                  android:configChanges="mcc|mnc"
+                  android:immersive="true"
+                  android:exported="false"
+                  android:windowSoftInputMode="stateAlwaysHidden">
+            <intent-filter>
+                <action android:name="org.lineageos.setupwizard.LINEAGE_WAIT_INSTALL_APPS" />
+                <category android:name="android.intent.category.DEFAULT" />
+            </intent-filter>
+        </activity>
+
         <activity android:name=".backup.RestoreIntroActivity"
                   android:label="@string/activity_label_empty"
                   android:excludeFromRecents="true"
@@ -296,5 +326,9 @@
 
         <service android:name=".SetupWizardExitService"
                  android:exported="false"/>
+
+        <service android:name=".apps.AppInstallerService"
+                 android:exported="false"/>
+
     </application>
 </manifest>
