Add step for installing apps from local F-Droid repo

--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -242,6 +242,19 @@
             </intent-filter>
         </activity>
 
+        <activity android:name=".apps.InstallAppsActivity"
+            android:label="@string/activity_label_empty"
+            android:excludeFromRecents="true"
+            android:configChanges="mcc|mnc"
+            android:immersive="true"
+            android:exported="false"
+            android:windowSoftInputMode="stateAlwaysHidden">
+            <intent-filter>
+                <action android:name="org.calyxos.setupwizard.CALYX_INSTALL_APPS"/>
+                <category android:name="android.intent.category.DEFAULT"/>
+            </intent-filter>
+        </activity>
+
         <activity android:name=".FinishActivity"
                   android:label="@string/activity_label_empty"
                   android:excludeFromRecents="true"
@@ -282,5 +295,9 @@
 
         <service android:name=".SetupWizardExitService"
                  android:exported="false"/>
+
+        <service android:name=".apps.AppInstallerService"
+                 android:exported="false"/>
+
     </application>
 </manifest>
