--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -40,6 +40,7 @@
     <uses-permission android:name="android.permission.CHANGE_COMPONENT_ENABLED_STATE" />
     <uses-permission android:name="android.permission.EXPAND_STATUS_BAR" />
     <uses-permission android:name="android.permission.BACKUP" />
+    <uses-permission android:name="android.permission.INSTALL_GRANT_RUNTIME_PERMISSIONS" />
     <uses-permission android:name="calyxos.permission.FINISH_SETUP" />
 
     <permission
@@ -245,7 +246,7 @@
             </intent-filter>
         </activity>
 
-        <activity android:name=".MicroGActivity"
+        <activity android:name=".apps.MicroGActivity"
             android:label="@string/activity_label_empty"
             android:excludeFromRecents="true"
             android:configChanges="mcc|mnc"
