Add a (disabled) activity for launching a restore from backup
This was added after installing apps, so it also introduces a dedicated
activity for waiting until all apps have been installed
to give us a chance to restore more data as more apps will be pre-installed.

--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -276,6 +276,32 @@
             </intent-filter>
         </activity>
 
+        <activity android:name=".apps.WaitInstallAppsActivity"
+            android:label="@string/activity_label_empty"
+            android:excludeFromRecents="true"
+            android:configChanges="mcc|mnc"
+            android:immersive="true"
+            android:exported="false"
+            android:windowSoftInputMode="stateAlwaysHidden">
+            <intent-filter>
+                <action android:name="org.calyxos.setupwizard.CALYX_WAIT_INSTALL_APPS"/>
+                <category android:name="android.intent.category.DEFAULT"/>
+            </intent-filter>
+        </activity>
+
+        <activity android:name=".backup.RestoreIntroActivity"
+            android:label="@string/activity_label_empty"
+            android:excludeFromRecents="true"
+            android:configChanges="mcc|mnc"
+            android:immersive="true"
+            android:exported="false"
+            android:windowSoftInputMode="stateAlwaysHidden">
+            <intent-filter>
+                <action android:name="org.calyxos.setupwizard.CALYX_RESTORE_BACKUP"/>
+                <category android:name="android.intent.category.DEFAULT"/>
+            </intent-filter>
+        </activity>
+
         <activity android:name=".FinishActivity"
                   android:label="@string/activity_label_empty"
                   android:excludeFromRecents="true"
