--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -147,6 +147,18 @@
             </intent-filter>
         </activity>
 
+        <activity android:name=".OemLockActivity"
+                  android:label="@string/activity_label_empty"
+                  android:excludeFromRecents="true"
+                  android:configChanges="mcc|mnc"
+                  android:immersive="true"
+                  android:windowSoftInputMode="stateAlwaysHidden">
+            <intent-filter>
+                <action android:name="org.calyxos.setupwizard.CALYX_OEM_LOCK" />
+                <category android:name="android.intent.category.DEFAULT" />
+            </intent-filter>
+        </activity>
+
         <activity android:name=".DateTimeActivity"
                   android:label="@string/activity_label_empty"
                   android:excludeFromRecents="true"
