--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -184,6 +184,19 @@
             </intent-filter>
         </activity>
 
+        <activity android:name=".EuiccSetupActivity"
+            android:label="@string/activity_label_empty"
+            android:excludeFromRecents="true"
+            android:configChanges="mcc|mnc"
+            android:immersive="true"
+            android:exported="false"
+            android:windowSoftInputMode="stateAlwaysHidden">
+            <intent-filter>
+                <action android:name="org.calyxos.setupwizard.CALYX_EUICC_SETUP" />
+                <category android:name="android.intent.category.DEFAULT" />
+            </intent-filter>
+        </activity>
+
         <activity android:name=".CaptivePortalSetupActivity"
                   android:label="@string/activity_label_empty"
                   android:excludeFromRecents="true"
