--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -47,6 +47,7 @@
     <uses-permission android:name="android.permission.MASTER_CLEAR" />
     <uses-permission android:name="android.permission.REBOOT" />
     <uses-permission android:name="lineageos.permission.FINISH_SETUP" />
+    <uses-permission android:name="org.microg.gms.PROVISION" />
 
     <permission
         android:name="lineageos.permission.FINISH_SETUP"
