--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -44,6 +44,7 @@
     <uses-permission android:name="android.permission.NETWORK_SETTINGS" />
     <uses-permission android:name="android.permission.MASTER_CLEAR" />
     <uses-permission android:name="lineageos.permission.FINISH_SETUP" />
+    <uses-permission android:name="org.microg.gms.PROVISION" />
 
     <permission
         android:name="lineageos.permission.FINISH_SETUP"
