Migrate demoted system apps
Create a self-disabling boot receiver that installs demoted system apps

Change-Id: Ia6ece45bd165ea60b75d02ab6aa480ebad8ecd4b

--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -341,6 +341,13 @@
             </intent-filter>
         </receiver>
 
+        <receiver android:name=".apps.BootReceiver"
+                  android:exported="true">
+            <intent-filter>
+                <action android:name="android.intent.action.BOOT_COMPLETED"/>
+            </intent-filter>
+        </receiver>
+
         <service android:name=".SetupWizardExitService"
                  android:exported="false"/>
 
