--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -305,6 +305,19 @@
             </intent-filter>
         </activity>
 
+        <activity android:name=".GarlicLevelActivity"
+            android:label="@string/activity_label_empty"
+            android:excludeFromRecents="true"
+            android:configChanges="mcc|mnc"
+            android:immersive="true"
+            android:exported="false"
+            android:windowSoftInputMode="stateAlwaysHidden">
+            <intent-filter>
+                <action android:name="org.lineageos.setupwizard.LINEAGE_GARLIC_LEVEL" />
+                <category android:name="android.intent.category.DEFAULT" />
+            </intent-filter>
+        </activity>
+
         <activity
             android:name=".FinishActivity"
             android:theme="@style/EdgeToEdgeWallpaperBackground"
