Password complexity helpers for garlic level
Add helpers to support ensuring a minimum password complexity for
garlic-level.

Change-Id: Id1745f346f7d98bc7d33ac04c9f86a474a50c66c

--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -48,6 +48,7 @@
     <uses-permission android:name="android.permission.REBOOT" />
     <uses-permission android:name="android.permission.GRANT_RUNTIME_PERMISSIONS" />
     <uses-permission android:name="android.permission.DISPATCH_PROVISIONING_MESSAGE" />
+    <uses-permission android:name="android.permission.REQUEST_PASSWORD_COMPLEXITY" />
     <uses-permission android:name="lineageos.permission.FINISH_SETUP" />
     <uses-permission android:name="org.microg.gms.PROVISION" />
 
