Don't export activities
Only export SetupWizardActivity. There is no need to export others.

Issue: calyxos#1740
Change-Id: Ic5f52c4caa0b64de2ac709946988cf80f7a3449e

--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -227,7 +227,7 @@
                   android:excludeFromRecents="true"
                   android:configChanges="mcc|mnc"
                   android:immersive="true"
-                  android:exported="true"
+                  android:exported="false"
                   android:windowSoftInputMode="stateAlwaysHidden">
             <intent-filter>
                 <action android:name="org.lineageos.setupwizard.NAVIGATION_SETTINGS" />
@@ -292,7 +292,7 @@
                   android:excludeFromRecents="true"
                   android:configChanges="mcc|mnc"
                   android:immersive="true"
-                  android:exported="true"
+                  android:exported="false"
                   android:windowSoftInputMode="stateAlwaysHidden">
             <intent-filter>
                 <action android:name="org.lineageos.setupwizard.LINEAGE_RESTORE_BACKUP"/>
@@ -305,7 +305,7 @@
                   android:excludeFromRecents="true"
                   android:configChanges="mcc|mnc"
                   android:immersive="true"
-                  android:exported="true"
+                  android:exported="false"
                   android:windowSoftInputMode="stateAlwaysHidden">
             <intent-filter>
                 <action android:name="org.lineageos.setupwizard.LINEAGE_SETUP_COMPLETE" />
